Small fix for align text on smaller screen

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -73,11 +73,18 @@ span {
   .name {
     font-size: 4rem;
     font-family: $great-vibes;
+
+    @media (max-width: 600px) {
+      text-align: center;
+    }
   }
   .roles {
     font-size: 1.5rem;
     font-family: $playfair-display;
     color: $grey;
+    @media (max-width: 600px) {
+      text-align: center;
+    }
   }
   .intro-button {
     margin-top: 1em;
